<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hobble</string>
    <string name="action_settings">Settings</string>
    <string name="hobble_login_text">hobble</string>
    <string name="title_activity_login">Welcome</string>
    <string name="pass_hint">password</string>
    <string name="user_hint">username</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="error_title">Error!</string>
    <string name="login_error_message">Invalid login credentials.</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_up_splash">don\'t walk. hobble.</string>
    <string name="title_activity_main">Hobble</string>
    <string name="map">Map</string>
    <string name="buddies">Buddies</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="username_textview">username</string>
    <string name="password_textview">password</string>
    <string name="email">email (@umich.edu only)</string>
    <string name="invalid_email_address">Ensure that your email is a &quot;@umich.edu&quot; domain.</string>
    <string name="select_homepoint">select homepoint</string>
    <string name="empty_fields_error">Make sure that all fields are filled!</string>
    <string name="fb_signin">Sign Up With Facebook</string>
    <string name="title_activity_map_page_fragment">Map</string>
    <string name="title_activity_buddies_fragment">Edit Buddies</string>
    <string name="empty_buddies">No hobble buddies :(</string>
    <string name="action_edit_buddies">Edit Buddies</string>
    <string name="add_buddy">Add Buddy</string>
    <string name="sign_up_punc">Sign Up</string>
    <string name="email_unverified">Your email is unverified. You must verify your email before you start Hobbling!</string>

</resources>
