<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f24b41"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    	   	    
	<EditText
	    android:id="@+id/usernameField"
	    android:background="@android:drawable/edit_text"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:hint="@string/user_hint"
	    android:ems="10" >
	    <requestFocus />
	</EditText>
	    
	<ImageView
	    android:id="@+id/userIcon"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:gravity="left"
	    android:layout_toLeftOf="@id/usernameField"
	    android:layout_marginRight="3dp"
	    android:src="@drawable/user_icon" />
	    
    <EditText
        android:id="@+id/passwordField"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameField"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:singleLine="true"
        android:hint="@string/pass_hint"
        android:ems="10"
        android:inputType="textPassword" />
    
	    
    <TextView
        android:id="@+id/login_splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/usernameField"
        android:layout_marginBottom="20dp"
        android:text="@string/hobble_login_text"
        android:textColor="@android:color/white"
        android:textSize="75sp" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="left"
        android:layout_toLeftOf="@id/passwordField"
        android:layout_below="@id/userIcon"
        android:layout_marginRight="3dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/password_icon" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signIn"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/sign_up" />

</RelativeLayout>